# para-humanizer

./: .gitignore  API_README.md  README.md  config.example.json  input.txt  main.py  pyproject.toml  requirements.txt  run_api.py  run_gradio.py  run_paraphraser.py  setup.py
api/: __init__.py  app.py  config.py  models.py  security.py
examples/: academic_test.py  api_client.py  basic_usage.py  file_processing.py
para_humanizer/: __init__.py
para_humanizer/cli/: __init__.py  command_line.py
para_humanizer/core/: __init__.py  paraphraser.py
para_humanizer/models/: __init__.py
para_humanizer/processors/: __init__.py  humanizer.py  rule_based.py  transformer.py
para_humanizer/resources/: synonym_stats.json  synonyms.json
para_humanizer/resources/config/: academic_terms.json  blacklist_words.json  connectors.json  default.json  fillers.json  protected_terms.json  sentence_structures.json
para_humanizer/utils/: __init__.py  config.py  config_manager.py  hardware.py  synonym_learner.py  synonym_loader.py  synonym_manager.py  text_analyzer.py  text_utils.py
tests/: test_api.py  test_humanizer.py  test_paraphraser.py  test_rule_based.py  test_text_analyzer.py
