[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "para-humanizer"
dynamic = ["version"]
description = "Advanced text paraphrasing with human-like qualities"
readme = "README.md"
authors = [
    {name = "Para-Humanizer Team", email = "mudabbirulsaad@gmail.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.7"

[tool.setuptools]
packages = ["para_humanizer"]

[tool.setuptools.dynamic]
version = {attr = "para_humanizer.__version__"}
